GET_FILENAME_COMPONENT(SUBPROJECT ${CMAKE_CURRENT_SOURCE_DIR} NAME)
PROJECT (${SUBPROJECT} C CXX)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FILE(GLOB SOURCES  RELATIVE "${${SUBPROJECT}_SOURCE_DIR}" *.cpp *.h)


SET (INC_DIRS
  ${FULL_SOURCE_DIR}
)


SOURCE_GROUP ("Header Files" FILES ${HEADERS} )
SOURCE_GROUP ("Source Files" FILES ${SOURCES})

ADD_EXECUTABLE(${SUBPROJECT}  ${HEADERS} ${SOURCES}  )
TARGET_INCLUDE_DIRECTORIES(${SUBPROJECT} PUBLIC ${INC_DIRS})
TARGET_COMPILE_DEFINITIONS(${SUBPROJECT} PUBLIC ROOTDIR="${FULL_SOURCE_DIR}")
TARGET_LINK_LIBRARIES(${SUBPROJECT} taskutils ${Python3_LIBRARIES})


