GET_FILENAME_COMPONENT(SUBPROJECT ${CMAKE_CURRENT_SOURCE_DIR} NAME)
PROJECT (${SUBPROJECT} C CXX)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FILE(GLOB SOURCES  RELATIVE "${${SUBPROJECT}_SOURCE_DIR}" *.cpp *.h)


SET (INC_DIRS
  ${FULL_SOURCE_DIR}
)

FIND_PACKAGE(Python3 COMPONENTS Development)
IF (NOT Python3_Development_FOUND)
    MESSAGE(FATAL_ERROR "Python libs not found")
ENDIF(NOT Python3_Development_FOUND)

SET (INC_DIRS
   ${FULL_SOURCE_DIR} ${Python3_INCLUDE_DIRS}
)

SOURCE_GROUP ("Header Files" FILES ${HEADERS} )
SOURCE_GROUP ("Source Files" FILES ${SOURCES})

ADD_EXECUTABLE(${SUBPROJECT}  ${HEADERS} ${SOURCES}  )
TARGET_INCLUDE_DIRECTORIES(${SUBPROJECT} PUBLIC ${INC_DIRS})
TARGET_COMPILE_DEFINITIONS(${SUBPROJECT} PUBLIC ROOTDIR="${FULL_SOURCE_DIR}")
TARGET_LINK_LIBRARIES(${SUBPROJECT} taskutils ${Python3_LIBRARIES})


